--- a/templates/PM.html
+++ b/templates/PM.html
@@ -28,7 +28,7 @@
                    </tr>
 
                 {% for task in tasks %}
-                    {% if task.state == 1 or task.state ==  4 or task.state ==  5 or (task.state ==  2 and task.change_kat == false) %}
+                    {% if task.state == 1 or task.state ==  4 or task.state ==  5 or task.state ==  7 or (task.state ==  2 and task.change_kat == false) %}
 
                         <tr class="task {% if task.completed %}completed{% endif %}" style="border-bottom: 1px solid; border-right: 1px solid; border-left: 1px solid;" >
 
