--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -214,7 +214,7 @@
             color: #0082da;
         }
 
-        .add-task div {
+        .inputbox{
         margin: 20px;
         width: 90%;
         border: 1px solid #ccc
