--- a/templates/add_mask.html
+++ b/templates/add_mask.html
@@ -13,7 +13,9 @@
     <div class="container">
         <h2>Eingabe der Daten vom Backoffice:</h2>
 
-        <p style="background-color: #0b2945; color: white; padding: 10px; margin: 0px; width: 50%">Eintrag erstellen:</p>
+        <p style="background-color: #0b2945; color: white; padding: 10px; margin: 0px; width: 50%">
+            Eintrag erstellen:
+        </p>
         <form action="/add" method="POST" class="add-task" style="width: 50%">
             <div>
                     <h3>Typ:</h3>
@@ -91,10 +93,8 @@
 
             <div>
                 <h3>Zuständigkeiten:</h3>
-                <input type="text" name="user" placeholder="Ersteller" required>
                 <input type="text" name="leader" placeholder="Projektleiter" required>
                 <p></p>
-
             </div>
 
             <div>
