--- a/templates/release.html
+++ b/templates/release.html
@@ -42,10 +42,7 @@
                     </table>
                 </div>
 
-                <div>
-                    <h3>Notiz:</h3>
-                    <textarea name="note" placeholder="Bemerkung" cols="100%" rows="10">{{ task.note }}</textarea>
-                </div>
+                {% include 'comment.html' %}
 
                 <div style="border: 0px; margin:10px"><button type="submit">Freigeben</button></div>
             </div>
