--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -273,7 +273,7 @@
         }
 
         #table1 tr,td{
-           border: 1px solid black;
+           border: 1px solid lightgrey;
            border-collapse: collapse;
            padding: 3px;
            text-align: left;
