--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -157,13 +157,6 @@
         width: 15px;
         }
 
-        .task td {
-            border: 1px solid;
-            font-size: 12px;
-            color: black;
-            text-align: center;
-        }
-
         .add-task {
             background-color: #ffffff;
             border: 0px solid #e0e0e0;
@@ -274,14 +267,23 @@
 
         #table1 tr,td{
            border: 1px solid lightgrey;
-           border-collapse: collapse;
-           padding: 3px;
+           border-collapse: separate;
            text-align: left;
            font-size: 14px;
            color: black;
         }
         #table1 th {
-            text-align: center;
+            text-align: left;
+            padding: 2px 20px 2px;
+            background-color: lightgrey;
+            border: 0px;
+            border-bottom: 1px black;
+            color: black;
+            font-weight: bold;
+        }
+
+        #table1 td {
+             padding: 2px 20px 2px;
         }
 
         #active-link {
