--- a/templates/PM.html
+++ b/templates/PM.html
@@ -12,8 +12,8 @@
     <div class="container">
         <h2>Offene Aufgaben Projektmanagement:</h2>
 
-            <table>
-                   <tr style="font-size: 14px">
+            <table id="table1">
+                   <tr>
                             <th>Bearbeiten</th>
                             <th>Typ</th>
                             <th>Status</th>
@@ -30,7 +30,7 @@
                 {% for task in tasks %}
                     {% if task.state == 1 or task.state ==  4 or task.state ==  5 or task.state ==  7 or (task.state ==  2 and task.change_kat == false) %}
 
-                        <tr class="task {% if task.completed %}completed{% endif %}" style="border-bottom: 1px solid; border-right: 1px solid; border-left: 1px solid;" >
+                        <tr>
 
                             <td>
                                 <center><a href="{% if task.state == 1 %}/categorize/{{ task.id }}
