--- a/templates/process.html
+++ b/templates/process.html
@@ -16,10 +16,10 @@
 
 
 
-    <div class="container">
+    <div class="container" style="width:100%">
 
         <div>
-        <form  action="/GETAddPart/{{ task.id }}" method="POST" style="width: 80%">
+        <form  action="/GETAddPart/{{ task.id }}" method="POST" style="width: 100%">
                     <p style="background-color: #0b2945; color: white; padding: 10px; margin: 0px; width: 90%">Änderungsmitteilung aufbereiten:</p>
                     <div class="inputbox">
                         <h3>Grunddaten:</h3>
