--- a/templates/changefolder.html
+++ b/templates/changefolder.html
@@ -4,16 +4,46 @@
 
       <div style="float: left;">
           <table id="foldersec">
-              <tr style="background-color: lightblue"><td colspan="2"><h3>ECR - Änderungsantrag</h3></td></tr>
+              <tr style="background-color: lightblue"><td style="width: 800px;"><h3>ECR - Änderungsantrag</h3></td></tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/1_erfassung.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/2_bewertung.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/3_ausarbeiten.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/4_bestaende.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/5_kalkulation.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/6_freigabe.html' %}</tr>
-              <tr style="background-color: orange"><td colspan="2"><h3>ECO - Änderungsauftrag</h3></td></tr>
+          </table>
+
+          <table id="foldersec">
+              <tr style="background-color: orange"><td colspan="2" style="width: 800px;"><h3>ECO - Änderungsauftrag</h3></td></tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/7_termin.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/8_kickoff.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
               <tr>{% include 'changefolder/9_einpflegen.html' %}</tr>
           </table>
       </div>
