--- a/templates/add_mask.html
+++ b/templates/add_mask.html
@@ -8,59 +8,117 @@
 
 <body>
 
-    {% include 'header.html' %}
+{% include 'header.html' %}
 
     <div class="container" style="float: auto;">
-      <h2>Änderungsmappe erfassen</h2>
+        <h2>Änderungsmappe erfassen</h2>
 
         <form action="/add" method="POST" class="add-task">
-            <div style="margin-left: 730px;"><button type="submit">Speichern</button></div>
-        <div style="float: left;">
+
+             <div style="float: left;">
 
 
-              <table id="foldersec">
+                  <table id="foldersec">
 
-                  <tr style="background-color: lightblue"><td colspan="2"><h3>ECR - Änderungsantrag</h3></td></tr>
-                          <tr><th colspan="3"><h3>1. Erfassung<h3></th></tr>
-                              <tr>
-                                  <td class="rotate" rowspan="5">Backoffice</td>
-                                  <td>Der interne oder externe Änderungsantrag wird im Backoffice im System angelegt und die Grunddaten gepflegt.</td>
-                              </tr>
-                              <tr><td id="data"><b>Greipl-Nummer: </b><input type="text" name="GGNR" placeholder="Greipl Nummer" required></td></tr>
-                              <tr>
-                                  <td><b>Typ: </b><br><br>
-                                      <div>
-                                            <fieldset>
-                                                <input type="radio" id="ÄMT" name="typ" value="ÄMT">
-                                                <label for="ÄMT">Änderung</label>
-                                                <input type="radio" id="NT" name="typ" value="NT">
-                                                <label for="NT">Neuteil</label>
-                                                <input type="radio" id="AA" name="typ" value="AA">
-                                                <label for="AA"> Anweisung</label>
-                                            </fieldset>
-                                            <p></p>
-                                    </div>
+                      <tr style="background-color: lightblue"><td colspan="2"><h3>ECR - Änderungsantrag</h3></td></tr>
+                              <tr><th colspan="3"><h3>1. Erfassung<h3></th></tr>
+                                  <tr>
+                                      <td class="rotate" rowspan="6">Backoffice</td>
+                                      <td>Der interne oder externe Änderungsantrag wird im Backoffice im System angelegt und die Grunddaten gepflegt.</td>
+                                  </tr>
+                                  <tr><td id="data"><b>Greipl-Nummer: </b><input type="text" name="GGNR" placeholder="Greipl Nummer" required><b>Bezeichnung: </b>INFRA-SQL<br>
+                                  <b>Kunde:</b> Kunde SQL-INFRA
                                   </td>
-                              </tr>
-                              <tr><td><b>Bezeichnung: </b>Bezeichnung aus Infra</td></tr>
-                              <tr><td><b>Vorgang: </b><input type="text" name="vorgang" placeholder="Vorgang" required></td></tr>
-                              <tr><td colspan="2">{{ task.user }}, {{ task.creationDate }} </td></tr>
+                                  </tr>
+                                  <tr><td><b>Vorgangsnummer: </b><input type="text" name="vorgang" placeholder="Vorgang" required></td></tr>
+                                    <tr>
+                                      <td><b>Teile Kategorie: </b>
+                                          <div>
+                                              <label for="typ">Kategorie auswählen</label>
+                                                  <select name="kat" id="kat">
+                                                    <option value="1">Kategorie 1</option>
+                                                    <option value="2">Kategorie 2</option>
+                                                    <option value="3">Kategorie 3</option>
+                                                  </select>
+                                          </div>
+                                          <br>
+                                      </td>
+                                  </tr>
+                                    <tr>
+                                      <td><b>Typ: </b>
+                                          <div>
+                                              <label for="typ">Typ auswählen:</label>
+                                                  <select name="typ" id="typ" onchange="showHideRow()">
+                                                      <option value="NT">Neuteil</option>
+                                                      <option value="ÄMT">Änderung</option>
+                                                      <option value="AA">Arbeitsanweisung</option>
+                                                  </select>
+                                          </div>
+                                          <br>
+                                      </td>
+                                  </tr>
+                                  <tr class="AMT_content" style="display: none; border-collapse: collapse;">
+                                      <td style="border: 0px solid black; border-right: 1px solid black; font-size 12px; width: 720px;">
+                                          <b>Änderungsdaten:</b><br><br>
+                                          Änderungsantrag von:
+                                                    <select name="change" id="change">
+                                                      <option value="1">Extern</option>
+                                                      <option value="0">Intern</option>
+                                                  </select>
+                                          <br><br>
+                                          Erstmusterprüfbericht:
+                                                    <select name="EMPB" id="EMPB">
+                                                      <option value="1">EMPB Extern</option>
+                                                      <option value="0">EMPB Intern</option>
+                                                  </select>
+                                          <br>
+                                          Ansprechpartner intern/extern:
+                                          <input style="width:150px;" type="text" name="contact" placeholder="Name" required>
+                                      </td>
+                                  </tr>
+                                  <tr><td colspan="2">{{ task.user }}, {{ task.creationDate }} </td></tr>
+                  </table>
+                 </div>
+                      {% include 'comment.html' %}
 
 
-                  <tr>{% include 'changefolder/2_bewertung.html' %}</tr>
-                  <tr>{% include 'changefolder/3_ausarbeiten.html' %}</tr>
-                  <tr>{% include 'changefolder/4_bestaende.html' %}</tr>
-                  <tr>{% include 'changefolder/5_kalkulation.html' %}</tr>
-                  <tr>{% include 'changefolder/6_freigabe.html' %}</tr>
-                  <tr style="background-color: orange"><td colspan="2"><h3>ECO - Änderungsauftrag</h3></td></tr>
-                  <tr>{% include 'changefolder/7_termin.html' %}</tr>
-                  <tr>{% include 'changefolder/8_kickoff.html' %}</tr>
-                  <tr>{% include 'changefolder/9_einpflegen.html' %}</tr>
-              </table>
+                    <div style="margin-left: 730px;"><button type="submit">Speichern</button></div>
 
+                  <table id="foldersec">
+                      <tr>{% include 'changefolder/2_bewertung.html' %}</tr>
+                      <tr>{% include 'changefolder/3_ausarbeiten.html' %}</tr>
+                      <tr>{% include 'changefolder/4_bestaende.html' %}</tr>
+                      <tr>{% include 'changefolder/5_kalkulation.html' %}</tr>
+                      <tr>{% include 'changefolder/6_freigabe.html' %}</tr>
+                      <tr style="background-color: orange"><td colspan="2"><h3>ECO - Änderungsauftrag</h3></td></tr>
+                      <tr>{% include 'changefolder/7_termin.html' %}</tr>
+                      <tr>{% include 'changefolder/8_kickoff.html' %}</tr>
+                      <tr>{% include 'changefolder/9_einpflegen.html' %}</tr>
+                  </table>
+            </div>
         </form>
-    </div>
     <div style="clear: both;"></div>
     </div>
+
+<script>
+                document.addEventListener("DOMContentLoaded", function() {
+                    var typRadios = document.getElementsByName("typ");
+                    var AMT_content = document.querySelectorAll(".AMT_content");
+
+                    for (var i = 0; i < typRadios.length; i++) {
+                        typRadios[i].addEventListener("change", function() {
+                            for (var j = 0; j < AMT_content.length; j++) {
+                                if (this.value === "ÄMT") {
+                                    AMT_content[j].style.display = "block";
+                                } else {
+                                    AMT_content[j].style.display = "none";
+                                }
+                            }
+                        });
+                    }
+                });
+</script>
+
+
 </body>
 </html>
