--- a/templates/changefolder/1_erfassung.html
+++ b/templates/changefolder/1_erfassung.html
@@ -3,20 +3,40 @@
               <th colspan="3"><h3>1. Erfassung<h3></th>
           </tr>
           <tr>
-              <td class="rotate" rowspan="5">Backoffice</td>
+              <td class="rotate" rowspan="6">Backoffice</td>
               <td>Der interne oder externe Änderungsantrag wird im Backoffice im System angelegt und die Grunddaten gepflegt.</td>
           </tr>
           <tr>
-              <td id="data"><b>Greipl-Nummer: </b>{{ task.GGNR }}</td>
+              <td id="data"><b>Greipl-Nummer: </b>{{ task.GGNR }} <b>Bezeichnung: </b>INFRA-SQL Bezeichnung<br>
+              <b>Kunde: </b>INFRA-SQL Kundenname
+              </td>
+          </tr>
+          <tr>
+              <td><b>Vorgang: </b>{{ task.vorgang }}</td>
+          </tr>
+          <tr>
+              <td><b>Teile Kategorie: </b>{{ task.kat }}</td>
           </tr>
           <tr>
               <td><b>Typ: </b>{{ task.typ }}</td>
           </tr>
           <tr>
-              <td><b>Bezeichnung: </b>Bezeichnung aus Infra</td>
-          </tr>
-          <tr>
-              <td><b>Vorgang: </b>{{ task.vorgang }}</td>
+              <td>
+                  <b>Änderungsdaten:</b><br>
+                  {% if task.change == true %}
+                    Änderungsantrag von: Extern<br>
+                  {% else %}
+                    Änderungsantrag von: Intern<br>
+                  {% endif %}
+
+                  {% if task.EMPB == 1 %}
+                    Erstmusterprüfbericht: EMPB Extern<br>
+                  {% else %}
+                    Erstmusterprüfbericht: EMPB Intern<br>
+                  {% endif %}
+
+                  Ansprechpartner intern/extern:<br>
+              </td>
           </tr>
           <tr>
               <td colspan="2">{{ task.user }}, {{ task.creationDate }} </td>
