--- a/templates/changefolder/2_bewertung.html
+++ b/templates/changefolder/2_bewertung.html
@@ -3,7 +3,7 @@
               <th colspan="3"><h3>2. Änderungsmappe bewerten<h3></th>
           </tr>
           <tr>
-              <td class="rotate" rowspan="2">Projektleitung</td>
+              <td class="rotate" rowspan="3">Projektleitung</td>
               <td>Einstufung der der Änderungsmappe in Kategorie A oder B.<br>
                   <u>Änderungskategorie A:</u><br>
                   Einfache Änderung mit nur wenig betroffenen Teilen z.B. Anpassung einer Bohrung in einem Blechteil.<br>
@@ -15,6 +15,9 @@
           </tr>
           <tr>
               <td><b>Änderungskategorie: </b>{% if task.change_kat == 0 %}A = Einfach{% else %}B = Komplex{%endif%}</td>
+          </tr>
+          <tr>
+              <td><b>Zuständige Projektleitung: </b>{{ task.leader }}</td>
           </tr>
           <tr>
               <td colspan="2">t.eder, 29.01.24</td>
