--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,21 +1,25 @@
-                    <h3>Kommentare:</h3>
-                    <div class="inputbox" style="width: 490px;">
+
+                <div style="float: right;">
+                        <h3>Kommentare:</h3>
+                    {% if task.comment %}
                         <div style="max-height:350px; overflow-y: scroll; display: flex; flex-direction: column-reverse; border: 1px solid #ccc;">
                            <table style="width:450px;">
-                             {% set list = task.comment.split(';') %}
-                                {%for i in list|batch(3)%}
-                                    {% if i[0] != '' %}
-                                        <tr style="width:450px; min-height: 200px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
-                                          <td style="text-align: left; vertical-align: top; height: 50px;" colspan="2">{{ i[0] }}</td>
-                                        </tr>
-                                        <tr style="background-color: lightgrey; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
-                                            <td style="font-size:14px; color:black; text-align: left;" >{{ i[2] }}</td>
-                                            <td style="font-size:14px; color:black; text-align: right;">{{ i[1] }}</td>
-                                        </tr>
-                                        <tr style="height: 15px;"></tr>
-                                    {% endif %}
-                                {% endfor %}
+                                 {% set list = task.comment.split(';') %}
+                                    {%for i in list|batch(3)%}
+                                        {% if i[0] != '' %}
+                                            <tr style="width:450px; min-height: 200px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
+                                              <td style="text-align: left; vertical-align: top; height: 50px;" colspan="2">{{ i[0] }}</td>
+                                            </tr>
+                                            <tr style="background-color: lightgrey; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
+                                                <td style="font-size:14px; color:black; text-align: left;" >{{ i[2] }}</td>
+                                                <td style="font-size:14px; color:black; text-align: right;">{{ i[1] }}</td>
+                                            </tr>
+                                            <tr style="height: 15px;"></tr>
+                                        {% endif %}
+                                    {% endfor %}
                            </table>
                         </div>
-                        <textarea name="note" placeholder="Kommentar" cols="60%" rows="5"></textarea>
-                    </div>
+                    {% endif %}
+                    <textarea name="note" placeholder="Kommentar" cols="60%" rows="5"></textarea>
+                 </div>
+                <div style="clear: both;"></div>
