--- a/templates/process.html
+++ b/templates/process.html
@@ -6,139 +6,217 @@
 </head>
 
 <body>
+{% include 'header.html' %}
+<div class="container" style="float: auto;">
 
-        <div class="header">
-            <div style="float: left; padding-left: 50px; padding-top: 35px;"><img src="{{ url_for('static', filename='logo-weiss.svg') }}" alt="Greipl Logo" height="75"></div>
-            <div class="navbar">
-                <a href="/PM" class="active-link">Zurück</a>
-            </div>
-        </div>
+    <h2>Aufbereitung der Änderungsmappe</h2>
+    <h2>Änderungsmappe Nr.: {{ task.id }}</h2>
+    <a href="#02">Zweitens</a>
+    <div style="float: left;">
+          <table id="foldersec">
+              <tr style="background-color: lightblue"><td style="width: 800px;"><h3>ECR - Änderungsantrag</h3></td></tr>
+          </table>
 
+          <table id="foldersec">
+              <tr>{% include 'changefolder/1_erfassung.html' %}</tr>
+          </table>
 
+          <table id="foldersec">
+              <tr>{% include 'changefolder/2_bewertung.html' %}</tr>
+          </table>
 
-    <div class="container" style="width:100%">
-
-        <div>
-        <form  action="/GETAddPart/{{ task.id }}" method="POST" style="width: 100%">
-                    <p style="background-color: #0b2945; color: white; padding: 10px; margin: 0px; width: 90%">Änderungsmitteilung aufbereiten:</p>
-                    <div class="inputbox">
-                        <h3>Grunddaten:</h3>
-                        <table id="table1">
-                               <tr>
-                                        <th>Typ</th>
-                                        <th>Greipl-Nr.</th>
-                                        <th>Bezeichnung</th>
-                                        <th>Vorgang</th>
-                                        <th>Ersteller</th>
-                                        <th>Projektleitung</th>
-                               </tr>
-
-                                <tr>
-                                        <td>{{ task.typ }}</td>
-                                        <td>{{ task.GGNR }}</td>
-                                        <td>Bezeichnung aus Infra</td>
-                                        <td>{{ task.vorgang }}</td>
-                                        <td>{{ task.user }}, {{ task.creationDate }} </td>
-                                        <td> {{ task.leader }} </td>
-                                </tr>
-                        </table>
-                    </div>
-
-                    <div class="inputbox">
-                     <h3>Betroffene Teile aus {{ task.AMTNR }}:</h3>
-                     <table id="table1">
-                           <tr>
-                                    <th>Greipl-Nr.</th>
-                                    <th>Bezeichnung</th>
-                                    <th>Aktuelle Rev</th>
-                                    <th>Neue Rev</th>
-                                    <th>Gültigkeit</th>
-                                    <th>Beschreibung</th>
-                                    <th></th>
-                           </tr>
-                            {% for amt_part in amt_parts %}
-
-                                {% if amt_part.AMTNR_PART == task.AMTNR %}
-                                    <tr>
-                                        <td>{{ amt_part.GGNR_PART }}</td>
-                                        <td>Bezeichnung aus Infra</td>
-                                        <td>{{ amt_part.REV_PART }}</td>
-                                        <td>{{ amt_part.REV_new_PART }}</td>
-                                        <td>
-                                            {% if amt_part.valid_PART == False %}
-                                                Neuauftrag
-                                            {% elif amt_part.valid_PART == True %}
-                                                Sofort
-                                            {% endif %}
-                                        </td>
-                                        <td>{{ amt_part.note_PART }}</td>
-                                        <td><center><a href="/process/part/delete/{{ amt_part.id }}/{{task.id}}" style="background-color: transparent; padding-top:3px;"><img class="icon" src="{{ url_for('static', filename='cancel.png') }}" alt="Icon"></a></center></td>
-                                    </tr>
-                                 {% endif %}
-                            {% endfor %}
-
-                     </table>
-                        <p></p>
-                                         <table id="table1">
-                                           <tr>
-                                               <th>Greipl-Nr.</th>
-                                               <th>Bezeichnung</th>
-                                               <th>Rev</th>
-                                               <th>Neue Rev</th>
-                                               <th>Gültigkeit</th>
-                                               <th>Beschreibung</th>
-                                               <th></th>
-                                           </tr>
-
-                                            <tr>
-                                                <td><input id="table_input" type="text" name="GGNR_PART" placeholder="Greipl Nummer" required></td>
-                                                <td>Bezeichnung</td>
-                                                <td>Rev</td>
-                                                <td><input id="table_input" type="text" name="REV_PART" placeholder="REV" style="width: 60px;" required></td>
-                                                <td>
-                                                    <input type="radio" id="Neuauftrag" name="valid_PART" value="0">
-                                                    <label for="Neuauftrag">Neuauftrag</label>
-                                                    <input type="radio" id="sofort" name="valid_PART" value="1">
-                                                    <label for="sofort">Sofort</label>
-                                                </td>
-                                                <td><input id="table_input" type="text" name="note_PART" placeholder="Änderungsbeschreibung" style="width: 350px;" required></td>
-                                                <td><button id="table_input" type="submit">Hinzufügen</button></td>
-                                            </tr>
-                                         </table>
+        <form  action="/GETAddPart/{{ task.id }}" method="POST">
+          <table id="foldersec">
+              <tr>
+              <th colspan="3"><h3 >3. Änderungsmappe ausarbeiten<h3></th>
+              </tr>
+              <tr>
+                  <td class="rotate" rowspan="2">TAV</td>
+                  <td>Alle betroffenen Teile und den dazugehörigen Änderungsgrund müssen anhand interner oder externer <br>
+                      Änderungsanweisungen im System gepflegt werden.<br>
+                      Benötigte Werkzeuge, Vorrichtungen oder Betriebsmittel erfassen
+                  </td>
+              </tr>
+              <tr>
 
 
-                        </div>
-            </form>
-            <form action="/process/add/{{ task.id }}" method="POST" style="width: 80%">
-<!--                <div>
-                    <h3>Betroffene Bereiche:</h3>
-                    <input type="checkbox" id="m1" name="m1" />
-                    <label for="m1">M1</label>
-                    <input type="checkbox" id="m2" name="m2" />
-                    <label for="m2">M2</label>
-                    <input type="checkbox" id="m3" name="m3" />
-                    <label for="m3">M3</label>
-                    <input type="checkbox" id="m4" name="m4" />
-                    <label for="m4">M4</label>
-                    <input type="checkbox" id="pt" name="pt" />
-                    <label for="pt">PT</label>
-                    <input type="checkbox" id="e1" name="e1" />
-                    <label for="e1">E1</label>
-                    <input type="checkbox" id="l1" name="l1" />
-                    <label for="l1">L1/L2</label>
-                    <input type="checkbox" id="kt" name="kt" />
-                    <label for="kt">KT</label>
-                </div>-->
 
-                    {% include 'comment.html' %}
+                      <td>
+                          <h3 id="01">Betroffene Baugruppen:</h3>
+                              <b>GREIPL-Nr.</b>
+                                  <input name="GGNR_PART" placeholder="GREIPL NR" style="width: 70px; padding:0;" required><br>
+                              <b>Bezeichnung:</b>
+                                Bezeichnung aus SQL <br>
+                              <b> Revision:</b>
+                                Rev<br>
+                              <b>Neue Revision:</b>
+                                <input name="REV_PART" placeholder="REV" style="width: 50px;" required><br>
+                              <b>Gültigkeit der Änderung:</b>
+                                  <select name="valid_PART" id="valid_PART">
+                                      <option value="0">Neuauftrag</option>
+                                      <option value="1">Sofort</option>
+                                  </select><br>
+                              <b>Beschreibung:</b>
+                                  <br><textarea name="note_PART" required></textarea><br>
+                              <button id="table_input" style="margin: 10px" type="submit">Hinzufügen</button>
 
-                    <button type="submit">Abschließen</button>
 
-            </form>
 
-        </div>
+
+
+                          <table id="table1" style="width: 690px;">
+                              <tr>
+                                  <th>Greipl-Nr.</th>
+                                  <th>Bezeichnung</th>
+                                  <th>Rev</th>
+                                  <th>Neue Rev</th>
+                                  <th>Gültigkeit</th>
+                                  <th>Beschreibung</th>
+                                  <th> {{ task.id }} </th>
+                              </tr>
+                              {% for amt_part in amt_parts %}
+                              {% if amt_part.AMTNR_PART == task.id and amt_part.parent is none %}
+                              <tr>
+                                  <td>{{ amt_part.GGNR_PART }}</td>
+                                  <td>Bezeichnung aus Infra</td>
+                                  <td>{{ amt_part.REV_PART }}</td>
+                                  <td>{{ amt_part.REV_new_PART }}</td>
+                                  <td>
+                                      {% if amt_part.valid_PART == False %}
+                                      Neuauftrag
+                                      {% elif amt_part.valid_PART == True %}
+                                      Sofort
+                                      {% endif %}
+                                  </td>
+                                  <td>{{ amt_part.note_PART }}</td>
+                                  <td><center><a href="/process/part/delete/{{ amt_part.id }}/{{task.id}}" style="background-color: transparent; padding-top:3px;"><img class="icon" src="{{ url_for('static', filename='cancel.png') }}" alt="Icon"></a></center></td>
+                              </tr>
+                              {% endif %}
+                              {% endfor %}
+                          </table>
+
+                          </table>
+                      </td>
+                  </tr>
+          </table>
+        </form>
+
+        <form  action="/GETAddPart/{{ task.id }}" method="POST">
+            <table id="foldersec" style="width: 809px;">
+                <tr>
+                      <td class="rotate" rowspan="2">TAV</td>
+                </tr>
+                  <tr>
+                          <td>
+                              <h3 id="02">Betroffene Einzelteile:</h3>
+                              <b>Baugruppe:</b>
+                                  <select name="parent" id="parent">
+                                      {% for amt_part in amt_parts %}
+                                        {% if amt_part.AMTNR_PART == task.id and amt_part.parent is none %}
+                                        <option value="{{ amt_part.GGNR_PART }}">{{ amt_part.GGNR_PART }}</option>
+                                        {% endif %}
+                                      {% endfor %}
+                                  </select><br>
+                              <b>GREIPL-Nr.</b>
+                                  <input name="GGNR_PART" placeholder="GREIPL NR" style="width: 70px; padding:0;" required><br>
+                              <b>Bezeichnung:</b>
+                                Bezeichnung aus SQL <br>
+                              <b> Revision:</b>
+                                Rev<br>
+                              <b>Neue Revision:</b>
+                                <input name="REV_PART" placeholder="REV" style="width: 50px;" required><br>
+                              <b>Gültigkeit der Änderung:</b>
+                                  <select name="valid_PART" id="valid_PART">
+                                      <option value="0">Neuauftrag</option>
+                                      <option value="1">Sofort</option>
+                                  </select><br>
+                              <b>Beschreibung:</b>
+                                  <br><textarea name="note_PART" required></textarea><br>
+
+                              <button id="table_input" style="margin: 10px" type="submit">Hinzufügen</button>
+
+
+                              <table id="table1" style="width: 690px;">
+                                  <tr>
+                                      <th>Greipl-Nr.</th>
+                                      <th>Bezeichnung</th>
+                                      <th>Rev</th>
+                                      <th>Neue Rev</th>
+                                      <th>Gültigkeit</th>
+                                      <th>Beschreibung</th>
+                                      <th></th>
+                                  </tr>
+
+                                  {% for amt_part in amt_parts %}
+                                  {% if amt_part.AMTNR_PART == task.id%}
+                                  {% if amt_part.parent is none%}
+                                      <tr>
+                                              <td><b>{{ amt_part.GGNR_PART }}</b></td>
+                                              <td colspan="6"><b>Bezeichnung aus Infra</b></td>
+                                              {% for amt_part1 in amt_parts %}
+                                                {% if amt_part1.parent == amt_part.GGNR_PART %}
+                                              <tr>
+                                          <td>{{ amt_part1.GGNR_PART }}</td>
+                                          <td>Bezeichnung aus Infra</td>
+                                          <td>{{ amt_part1.REV_PART }}</td>
+                                          <td>{{ amt_part1.REV_new_PART }}</td>
+                                          <td>
+                                              {% if amt_part1.valid_PART == False %}
+                                              Neuauftrag
+                                              {% elif amt_part1.valid_PART == True %}
+                                              Sofort
+                                              {% endif %}
+                                          </td>
+                                          <td>{{ amt_part1.note_PART }}</td>
+                                          <td><center><a href="/process/part/delete/{{ amt_part.id }}/{{task.id}}" style="background-color: transparent; padding-top:3px;"><img class="icon" src="{{ url_for('static', filename='cancel.png') }}" alt="Icon"></a></center></td>
+                                        </tr>
+                                      {% endif %}
+                                      {% endfor %}
+                                  </tr>
+                                  {% endif %}
+
+                                  {% endif %}
+                              {% endfor %}
+
+                          </table>
+                          </td>
+                      </tr>
+              </table>
+        </form>
+
+
+          <table id="foldersec">
+              <tr>{% include 'changefolder/4_bestaende.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
+              <tr>{% include 'changefolder/5_kalkulation.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
+              <tr>{% include 'changefolder/6_freigabe.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
+              <tr style="background-color: orange"><td colspan="2" style="width: 800px;"><h3>ECO - Änderungsauftrag</h3></td></tr>
+          </table>
+
+          <table id="foldersec">
+              <tr>{% include 'changefolder/7_termin.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
+              <tr>{% include 'changefolder/8_kickoff.html' %}</tr>
+          </table>
+
+          <table id="foldersec">
+              <tr>{% include 'changefolder/9_einpflegen.html' %}</tr>
+          </table>
     </div>
 
+    <div style="clear: both;"></div>
+
+</div>
 </body>
 </html>
 
